src/main/resources/tests/Semantics/bad/forLoop2.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure TestLoops is
   variable1 : integer;
   variable2 : character;
begin

   for variable1 in true .. false loop -- Error: range should be integer or character
      put('E');
   end loop;
end TestLoops;
